--- a/src/output.css
+++ b/src/output.css
@@ -427,8 +427,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
+  }
+  .w-\[100\%\] {
+    width: 100%;
   }
   .w-screen {
     width: 100vw;
