--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
+    --color-green-500: oklch(0.723 0.219 149.579);
     --spacing: 0.25rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
@@ -415,6 +416,9 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-fit {
+    height: fit-content;
+  }
   .h-screen {
     height: 100vh;
   }
@@ -433,7 +437,13 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-\[50\%\] {
+    width: 50%;
+  }
   .w-\[100\%\] {
+    width: 100%;
+  }
+  .w-full {
     width: 100%;
   }
   .w-screen {
@@ -1042,6 +1052,9 @@
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
+  .bg-green-500 {
+    background-color: var(--color-green-500);
+  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -1062,6 +1075,33 @@
   .bg-radial {
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
+  }
+  .bg-\[url\(\.\.\/public\/img\/images\(3\)\.jpg\)\] {
+    background-image: url(../public/img/images(3).jpg);
+  }
+  .bg-\[url\(\.\.\/public\/img\/images\(4\)\.jpg\)\] {
+    background-image: url(../public/img/images(4).jpg);
+  }
+  .bg-\[url\(\.\.\/public\/img\/images\.jpg\)\] {
+    background-image: url(../public/img/images.jpg);
+  }
+  .bg-\[url\(\.\.\/public\/img\/nature\.jpg\)\] {
+    background-image: url(../public/img/nature.jpg);
+  }
+  .bg-\[url\(\.\.\/public\/img\/photo\.jpg\.jpg\)\] {
+    background-image: url(../public/img/photo.jpg.jpg);
+  }
+  .bg-\[url\(\.\.\/public\/img\/photo\.jpgj\.pg\)\] {
+    background-image: url(../public/img/photo.jpgj.pg);
+  }
+  .bg-\[url\(\.\.\/public\/img\/photo1\.jpg\)\] {
+    background-image: url(../public/img/photo1.jpg);
+  }
+  .bg-\[url\(\.\/public\/img\/photo\.jpg\.jpg\)\] {
+    background-image: url(./public/img/photo.jpg.jpg);
+  }
+  .bg-\[url\(\/public\/img\/photo\.jpg\.jpg\)\] {
+    background-image: url(/public/img/photo.jpg.jpg);
   }
   .bg-none {
     background-image: none;
@@ -1216,6 +1256,9 @@
   }
   .object-top {
     object-position: top;
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
   }
   .text-center {
     text-align: center;
