--- a/src/output.css
+++ b/src/output.css
@@ -7,8 +7,10 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-green-500: oklch(0.723 0.219 149.579);
+    --color-green-600: oklch(0.627 0.194 149.214);
+    --color-gray-500: oklch(0.551 0.027 264.364);
     --color-black: #000;
+    --color-white: #fff;
     --spacing: 0.25rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
@@ -417,6 +419,9 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-\[200px\] {
+    height: 200px;
+  }
   .h-fit {
     height: fit-content;
   }
@@ -440,9 +445,6 @@
   }
   .w-\[50\%\] {
     width: 50%;
-  }
-  .w-\[100\%\] {
-    width: 100%;
   }
   .w-full {
     width: 100%;
@@ -836,6 +838,12 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 1;
@@ -1063,8 +1071,11 @@
   .bg-black {
     background-color: var(--color-black);
   }
-  .bg-green-500 {
-    background-color: var(--color-green-500);
+  .bg-gray-500 {
+    background-color: var(--color-gray-500);
+  }
+  .bg-green-600 {
+    background-color: var(--color-green-600);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1074,6 +1085,9 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1087,32 +1101,11 @@
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
   }
-  .bg-\[url\(\.\.\/public\/img\/images\(3\)\.jpg\)\] {
-    background-image: url(../public/img/images(3).jpg);
-  }
-  .bg-\[url\(\.\.\/public\/img\/images\(4\)\.jpg\)\] {
-    background-image: url(../public/img/images(4).jpg);
-  }
-  .bg-\[url\(\.\.\/public\/img\/images\.jpg\)\] {
-    background-image: url(../public/img/images.jpg);
-  }
-  .bg-\[url\(\.\.\/public\/img\/nature\.jpg\)\] {
-    background-image: url(../public/img/nature.jpg);
-  }
   .bg-\[url\(\.\.\/public\/img\/photo\.jpg\.jpg\)\] {
     background-image: url(../public/img/photo.jpg.jpg);
   }
-  .bg-\[url\(\.\.\/public\/img\/photo\.jpgj\.pg\)\] {
-    background-image: url(../public/img/photo.jpgj.pg);
-  }
   .bg-\[url\(\.\.\/public\/img\/photo1\.jpg\)\] {
     background-image: url(../public/img/photo1.jpg);
-  }
-  .bg-\[url\(\.\/public\/img\/photo\.jpg\.jpg\)\] {
-    background-image: url(./public/img/photo.jpg.jpg);
-  }
-  .bg-\[url\(\/public\/img\/photo\.jpg\.jpg\)\] {
-    background-image: url(/public/img/photo.jpg.jpg);
   }
   .bg-none {
     background-image: none;
