--- a/src/output.css
+++ b/src/output.css
@@ -7,10 +7,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-green-600: oklch(0.627 0.194 149.214);
-    --color-gray-500: oklch(0.551 0.027 264.364);
     --color-black: #000;
-    --color-white: #fff;
     --spacing: 0.25rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
@@ -19,6 +16,7 @@
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --color-login: rgba(255,255,255,0,5);
   }
 }
 @layer base {
@@ -422,9 +420,6 @@
   .h-\[200px\] {
     height: 200px;
   }
-  .h-fit {
-    height: fit-content;
-  }
   .h-screen {
     height: 100vh;
   }
@@ -436,9 +431,6 @@
   }
   .min-h-screen {
     min-height: 100vh;
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
@@ -838,9 +830,6 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
-  }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
@@ -1068,14 +1057,8 @@
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
-  .bg-gray-500 {
-    background-color: var(--color-gray-500);
-  }
-  .bg-green-600 {
-    background-color: var(--color-green-600);
+  .bg-login {
+    background-color: var(--color-login);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1085,9 +1068,6 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
-  }
-  .bg-white {
-    background-color: var(--color-white);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1103,9 +1083,6 @@
   }
   .bg-\[url\(\.\.\/public\/img\/photo\.jpg\.jpg\)\] {
     background-image: url(../public/img/photo.jpg.jpg);
-  }
-  .bg-\[url\(\.\.\/public\/img\/photo1\.jpg\)\] {
-    background-image: url(../public/img/photo1.jpg);
   }
   .bg-none {
     background-image: none;
