--- a/src/output.css
+++ b/src/output.css
@@ -7,19 +7,13 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-green-700: oklch(0.527 0.154 150.069);
-    --color-green-800: oklch(0.448 0.119 151.328);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
-    --text-5xl: 3rem;
-    --text-5xl--line-height: 1;
     --font-weight-bold: 700;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
@@ -28,7 +22,7 @@
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
-    --color-login: rgba(255,255,255,0,5);
+    --color-login: rgba(255,255,255,.55);
   }
 }
 @layer base {
@@ -342,23 +336,8 @@
       max-width: 96rem !important;
     }
   }
-  .mx-\[12px\] {
-    margin-inline: 12px;
-  }
   .mx-auto {
     margin-inline: auto;
-  }
-  .my-\[50\%\] {
-    margin-block: 50%;
-  }
-  .my-auto {
-    margin-block: auto;
-  }
-  .ml-\[12px\] {
-    margin-left: 12px;
-  }
-  .ml-\[42px\] {
-    margin-left: 42px;
   }
   .box-border {
     box-sizing: border-box;
@@ -447,20 +426,8 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-\[400px\] {
-    height: 400px;
-  }
   .h-\[450px\] {
     height: 450px;
-  }
-  .h-\[500px\] {
-    height: 500px;
   }
   .h-screen {
     height: 100vh;
@@ -474,32 +441,11 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
   .w-\[30\%\] {
     width: 30%;
-  }
-  .w-\[33\%\] {
-    width: 33%;
-  }
-  .w-\[40\%\] {
-    width: 40%;
-  }
-  .w-\[45\%\] {
-    width: 45%;
-  }
-  .w-\[50\%\] {
-    width: 50%;
-  }
-  .w-\[60\%\] {
-    width: 60%;
-  }
-  .w-\[70\%\] {
-    width: 70%;
   }
   .w-\[80\%\] {
     width: 80%;
@@ -896,9 +842,6 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
-  }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
@@ -998,9 +941,6 @@
   }
   .rounded-\[10px\] {
     border-radius: 10px;
-  }
-  .rounded-\[20px\] {
-    border-radius: 20px;
   }
   .rounded-s {
     border-start-start-radius: 0.25rem;
@@ -1114,9 +1054,6 @@
     --tw-border-style: solid;
     border-style: solid;
   }
-  .border-black {
-    border-color: var(--color-black);
-  }
   .border-white {
     border-color: var(--color-white);
   }
@@ -1134,15 +1071,6 @@
   }
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
-  }
-  .bg-black {
-    background-color: var(--color-black);
-  }
-  .bg-green-700 {
-    background-color: var(--color-green-700);
-  }
-  .bg-green-800 {
-    background-color: var(--color-green-800);
   }
   .bg-login {
     background-color: var(--color-login);
@@ -1334,29 +1262,11 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
-  .py-\[8\%\] {
-    padding-block: 8%;
-  }
   .py-\[9\%\] {
     padding-block: 9%;
   }
-  .py-\[10\%\] {
-    padding-block: 10%;
-  }
-  .py-\[11\%\] {
-    padding-block: 11%;
-  }
-  .py-\[12\%\] {
-    padding-block: 12%;
-  }
-  .py-\[50\%\] {
-    padding-block: 50%;
-  }
   .pl-\[12px\] {
     padding-left: 12px;
-  }
-  .pl-\[32px\] {
-    padding-left: 32px;
   }
   .text-center {
     text-align: center;
@@ -1404,29 +1314,13 @@
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
-  }
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
-  .text-5xl {
-    font-size: var(--text-5xl);
-    line-height: var(--tw-leading, var(--text-5xl--line-height));
-  }
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
-  }
-  .font-\[40px\] {
-    --tw-font-weight: 40px;
-    font-weight: 40px;
-  }
-  .font-\[50\%\] {
-    --tw-font-weight: 50%;
-    font-weight: 50%;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
