--- a/src/output.css
+++ b/src/output.css
@@ -22,7 +22,7 @@
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
-    --color-login: rgba(255,255,255,.55);
+    --color-login: rgba(255,255,255,0.3);
   }
 }
 @layer base {
@@ -339,6 +339,21 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .mr-\[15px\] {
+    margin-right: 15px;
+  }
+  .mr-\[20px\] {
+    margin-right: 20px;
+  }
+  .ml-\[12px\] {
+    margin-left: 12px;
+  }
+  .ml-\[15px\] {
+    margin-left: 15px;
+  }
+  .ml-\[20px\] {
+    margin-left: 20px;
+  }
   .box-border {
     box-sizing: border-box;
   }
@@ -426,8 +441,8 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-\[450px\] {
-    height: 450px;
+  .h-\[500px\] {
+    height: 500px;
   }
   .h-screen {
     height: 100vh;
@@ -440,6 +455,9 @@
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
@@ -942,6 +960,9 @@
   .rounded-\[10px\] {
     border-radius: 10px;
   }
+  .rounded-\[15px\] {
+    border-radius: 15px;
+  }
   .rounded-s {
     border-start-start-radius: 0.25rem;
     border-end-start-radius: 0.25rem;
@@ -1262,8 +1283,8 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
-  .py-\[9\%\] {
-    padding-block: 9%;
+  .py-\[5\%\] {
+    padding-block: 5%;
   }
   .pl-\[12px\] {
     padding-left: 12px;
@@ -1317,6 +1338,9 @@
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-\[25px\] {
+    font-size: 25px;
   }
   .leading-none {
     --tw-leading: 1;
