--- a/src/output.css
+++ b/src/output.css
@@ -10,6 +10,8 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-4xl: 2.25rem;
@@ -342,8 +344,17 @@
   .mr-\[15px\] {
     margin-right: 15px;
   }
+  .mr-\[20\%\] {
+    margin-right: 20%;
+  }
   .mr-\[20px\] {
     margin-right: 20px;
+  }
+  .mr-\[30\%\] {
+    margin-right: 30%;
+  }
+  .mr-\[40px\] {
+    margin-right: 40px;
   }
   .ml-\[12px\] {
     margin-left: 12px;
@@ -963,6 +974,9 @@
   .rounded-\[15px\] {
     border-radius: 15px;
   }
+  .rounded-\[30px\] {
+    border-radius: 30px;
+  }
   .rounded-s {
     border-start-start-radius: 0.25rem;
     border-end-start-radius: 0.25rem;
@@ -1338,6 +1352,10 @@
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
   }
   .text-\[25px\] {
     font-size: 25px;
