--- a/src/output.css
+++ b/src/output.css
@@ -463,6 +463,9 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -471,6 +474,9 @@
   }
   .w-\[30\%\] {
     width: 30%;
+  }
+  .w-\[75\%\] {
+    width: 75%;
   }
   .w-\[80\%\] {
     width: 80%;
