--- a/src/output.css
+++ b/src/output.css
@@ -876,6 +876,9 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
+  .gap-\[15px\] {
+    gap: 15px;
+  }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 1;
