--- a/src/output.css
+++ b/src/output.css
@@ -1299,6 +1299,9 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-\[10px\] {
+    padding-inline: 10px;
+  }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
